@@ -8,12 +8,17 @@ Features and Improvements
     All Aranea JSP <ui:*button> tags now recognize 'tabindex' attribute       | See #473
     New ListItemsData constructor -- ListItemsData(List itemRange, Long count)| See #494
     Bundled Prototype JS library was upgraded from 1.5.1 -> 1.5.1.1           | See #489
-   
+    Support for background server-side form validation (while filling form)   | See change #502, #511
+    Tab widget was added (TabContainerWidget)                                 | See change #466
+    Support for right-click menu (ContextMenuWidget)                          | See #487
+    <ui:tooltip> tag was added                                                | See #497
+
 Bugfixes
     BeanFormWidget writeToBean (old readBean()) destroying content of subform | See #420
     FormWidget restoreBaseState() did not work correctly                      | See #507
     Rare NPE in ListSqlHelper.getDatabase(Filter|Order)Params was removed     | See #249
     examples/serviceHelloName had stopped working                             | See #510
+    BaseTag.getConfiguration() always returned NULL                           | See #380
     
 Deprecation & API changes
     BeanFormWidget.readFromBean() replaces deprecated writeBean().            | See 
